--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -81,12 +81,15 @@
   </div>
 </div>
 
- <!-- Unified Gauge Section -->
+
+<!-- Unified Gauge Section -->
 <div class="gauge-section">
   <mat-card class="gauge-card">
     <div class="gauge-title">פילוח מחלקתי - מדדי ניתוח</div>
 
+    <!-- Row of Gauges -->
     <div class="gauge-row">
+
       <!-- Total Mobility Score Gauge -->
       <div class="gauge-item">
         <div class="gauge-title">פילוח מחלקתי - ציון מסכם</div>
@@ -98,6 +101,9 @@
           [append]="'%'"
           [foregroundColor]="getGaugeColor()"> 
         </ngx-gauge>
+        <div class="gauge-info">
+          <strong>תוקף: {{ validMobilityCases }} / לא תוקף: {{ invalidMobilityCases }}</strong>
+        </div>
       </div>
 
       <!-- Recommendation for Walking Gauge -->
@@ -111,6 +117,10 @@
           [append]="'%'"
           [foregroundColor]="getGaugeColor()"> 
         </ngx-gauge>
+        <div class="gauge-info">
+          <strong>מרשם הליכה תקין - {{ validWalkingCases }} / לא תקין - {{ invalidWalkingCases }}</strong>
+        </div>
+        
       </div>
 
       <!-- Consultation Status Gauge -->
@@ -124,22 +134,28 @@
           [append]="'%'"
           [foregroundColor]="getGaugeColor()"> 
         </ngx-gauge>
+        <div class="gauge-info">
+          <strong>הוזמן ייעוץ - {{ validConsultationCases }} / לא הוזמן ייעוץ - {{ invalidConsultationCases }}</strong>
+        </div>
       </div>
 
-      <!-- Cognitive State Gauge -->
+      <!-- Functional State (מצב תפקודי) -->
       <div class="gauge-item">
-        <div class="gauge-title">מצב קוגניטיבי</div>
+        <div class="gauge-title">מצב תפקודי</div>
         <ngx-gauge
-          [value]="cognitiveStateGauge"
+          [value]="functionalStateGauge"
           [min]="0"
           [max]="100"
           [label]="''"
           [append]="'%'"
           [foregroundColor]="getGaugeColor()"> 
         </ngx-gauge>
+        <div class="gauge-info">
+          <strong> תקין {{ validFunctionalCases }} / לא תקין {{ invalidFunctionalCases }} </strong>
+        </div>
       </div>
 
-      <!-- Mobility State Gauge -->
+      <!-- Mobility State (מצב ניידות) -->
       <div class="gauge-item">
         <div class="gauge-title">מצב ניידות</div>
         <ngx-gauge
@@ -150,10 +166,14 @@
           [append]="'%'"
           [foregroundColor]="getGaugeColor()"> 
         </ngx-gauge>
+        <div class="gauge-info">
+          <strong> תקין {{ validMobilityStateCases }} / לא תקין {{ invalidMobilityStateCases }} </strong>
+        </div>
       </div>
-    </div>
 
-    <!-- Button -->
+    </div> <!-- End of gauge-row -->
+
+    <!-- Button Section -->
     <div class="button-section">
       <button mat-raised-button color="primary" (click)="openDepartmentPercentagesDialog()">
         פילוח מחלקתי - ציון מסכם
@@ -162,6 +182,7 @@
 
   </mat-card>
 </div>
+
 
 
 
