--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -118,7 +118,7 @@
           [foregroundColor]="getGaugeColor()"> 
         </ngx-gauge>
         <div class="gauge-info">
-          <strong>מרשם הליכה תקין - {{ validWalkingCases }} / לא תקין - {{ invalidWalkingCases }}</strong>
+          <strong>  תקין - {{ validWalkingCases }} / לא תקין - {{ invalidWalkingCases }}</strong>
         </div>
         
       </div>
