--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.scss
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.scss
@@ -569,4 +569,9 @@
     }
   }
   
-  
+  .info-icon {
+    cursor: pointer;
+    margin-right: 5px;
+    vertical-align: middle;
+    color: gray; /* Adjust color if needed */
+  }
