--- a/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.html
+++ b/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.html
@@ -1,33 +1,65 @@
-<div class="body">
+<!-- ✅ Centered Loading Section with Graphic -->
+<div *ngIf="isLoading" class="loading-container">
+  <div class="image-slider">
+    <img *ngFor="let img of loadingImages; let i = index"
+         [src]="img" 
+         [class.active]="i === currentImageIndex"
+         alt="Hospital and Mobility"
+         class="loading-image" />
+  </div>
+  <p class="loading-text">...אוסף נתונים לדוח מיתב</p>
+</div>
+
+<div class="body" *ngIf="!isLoading">
     <div class="nine">
         <h1>{{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span></h1>
       </div>
       <mat-card class="info-card mat-elevation-z4">
         <mat-card-title>מידע כללי</mat-card-title>
 
-        
         <mat-card-content>
           <div class="info-card-content">
             
-            <div>
-              
+            <!-- Walking Prescription -->
+            <div class="info-item">
+              <mat-icon class="info-icon">directions_walk</mat-icon>
               <span class="info-label">{{ walkingStats }}</span>
-              <mat-icon>directions_walk</mat-icon>
             </div>
-            <div>
-              
+        
+            <!-- Mobility Assessment -->
+            <div class="info-item">
+              <mat-icon class="info-icon">accessibility</mat-icon>
               <span class="info-label">{{ mobilityStats }}</span>
-              <mat-icon>accessibility</mat-icon>
             </div>
-            <div>
-             
+        
+            <!-- Physiotherapy Consultation -->
+            <div class="info-item">
+              <mat-icon class="info-icon">medical_services</mat-icon>
               <span class="info-label">{{ physiotherapyStats }}</span>
-              <mat-icon>medical_services</mat-icon>
             </div>
+        
+            <!-- Mobility at Reception -->
+            <div class="info-item">
+              <mat-icon class="info-icon">transfer_within_a_station</mat-icon>
+              <span class="info-label">{{ mobilityAtReceptionStats }}</span>
+            </div>
+        
+            <!-- Functional State Execution -->
+            <div class="info-item">
+              <mat-icon class="info-icon">self_improvement</mat-icon>
+              <span class="info-label">{{ functionalStateStats }}</span>
+            </div>
+        
+            <!-- Dates With Both Shifts -->
+            <div class="info-item">
+              <mat-icon class="info-icon">event_available</mat-icon>
+              <span class="info-label">{{ datesWithBothShiftsStats }}</span>
+            </div>
+        
           </div>
         </mat-card-content>
-      </mat-card>
-      
+        </mat-card>
+        
       
       
     <form [formGroup]="filterForm" class="filter-form" dir="rtl">
@@ -43,7 +75,7 @@
         </mat-select>
       </mat-form-field>
       <button mat-raised-button color="primary" (click)="resetFilters()">איפוס</button>
-      <!-- //<button mat-raised-button color="accent" (click)="exportToExcel()">ייצוא לאקסל</button> -->
+      <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
       
     </form>
   
@@ -76,7 +108,7 @@
     
           <!-- 🔴 "FunctionalStateExecution" (מצב תפקודי) - If אין תיעוד, turn red -->
           <ng-container *ngIf="column === 'FunctionalStateExecution'">
-            <span [ngClass]="{'red-text': element.FunctionalStateExecution === 'אין תיעוד'}">
+            <span [ngClass]="{'red-text': element.FunctionalStateExecution === 'לא בוצע'}">
               {{ element.FunctionalStateExecution }}
             </span>
           </ng-container>
@@ -111,6 +143,7 @@
     
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+     
     </mat-table>
     
     
@@ -118,8 +151,8 @@
     <!-- <mat-paginator [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator> -->
     
       
-      
+    <mat-paginator [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
     
-      <mat-paginator [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
+      
     </div>
     
