--- a/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
+++ b/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
@@ -8,58 +8,55 @@
 
   <!-- Filter Form for Table -->
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
-<!-- Entry Date (Date Range for Report Filtering) -->
-<mat-form-field>
-    <mat-label>תאריך דיווח - התחלה</mat-label>
-    <input matInput [matDatepicker]="startDatePicker" formControlName="startEntryDate">
-    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-    <mat-datepicker #startDatePicker></mat-datepicker>
-  </mat-form-field>
-  
-  <mat-form-field>
-    <mat-label>תאריך דיווח - סוף</mat-label>
-    <input matInput [matDatepicker]="endDatePicker" formControlName="endEntryDate">
-    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-    <mat-datepicker #endDatePicker></mat-datepicker>
-  </mat-form-field>
-  
- 
+    <!-- Entry Date (Date Range for Report Filtering) -->
+    <mat-form-field>
+      <mat-label>תאריך דיווח - התחלה</mat-label>
+      <input matInput [matDatepicker]="startDatePicker" formControlName="startEntryDate">
+      <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+      <mat-datepicker #startDatePicker></mat-datepicker>
+    </mat-form-field>
+    
+    <mat-form-field>
+      <mat-label>תאריך דיווח - סוף</mat-label>
+      <input matInput [matDatepicker]="endDatePicker" formControlName="endEntryDate">
+      <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+      <mat-datepicker #endDatePicker></mat-datepicker>
+    </mat-form-field>
+
     <!-- Form Footer with Search, Reset, and Export Options -->
     <div dir="rtl" class="form-footer" style="display: flex; justify-content: space-between;">
-      <!-- Global Search Input with Full Width -->
       <mat-form-field class="long-search-bar" style="flex: 1; margin-right: 10px;">
         <mat-label class="filters" style="color: blue">חיפוש</mat-label>
-        <input matInput [formControlName]="'globalFilter'" class="search-input" />
+        <input matInput formControlName="globalFilter" class="search-input" (input)="applyFilters()" />
       </mat-form-field>
 
-      <!-- Buttons on the Right Side -->
       <div class="button-container" style="display: flex; align-items: center;">
-        <!-- Reset Button -->
         <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="Reset Filters">
           <i class="material-icons">refresh</i>
         </button>
-
-        <!-- Graph Navigation Button -->
-
-        <!-- Export to Excel Button -->
         <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon icon" width="50px" style="margin-right: 10px;" />
       </div>
     </div>
   </form>
 
- 
-
-  <!-- Data Table (Conditionally Displayed) -->
+  <!-- Data Table with Pagination and Sorting -->
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            
     <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> {{ column }} </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element[column] }} </mat-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> {{ column }} </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <ng-container *ngIf="column === 'EntryDate'; else defaultCell">
+          {{ element[column] | date:'dd/MM/yyyy' }} 
+        </ng-container>
+        <ng-template #defaultCell>
+          {{ element[column] }}
+        </ng-template>
+      </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</table>
+  </table>
 
-
+  <!-- ✅ Pagination Control -->
+  <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
 </div>
